--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ site_name: Islam Education
 site_description: Clear and accessible knowledge about Islam
 site_url: https://islam-education.com
 
+docs_dir: .
+
+
 theme:
   name: material
   language: en
