--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Islamic Education
-site_description: Clear and accessible knowledge about Islam
+site_name: Islam Education
+site_description: Clear, authentic and accessible knowledge about Islam
 site_url: https://islam-education.com
 
 theme:
@@ -8,6 +8,34 @@ theme:
 
 nav:
   - Home: index.md
-  - Learn:
-      - The Shahada: learn/shahada.md
-  - About: about.md
+
+  - Basic Knowledge:
+      - What is Islam?: basic-knowledge/what-is-islam.md
+      - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
+      - The Qur’an: basic-knowledge/quran.md
+      - The Five Pillars:
+          - Shahada: basic-knowledge/pillars/shahada.md
+          - Prayer (Salah): basic-knowledge/pillars/prayer.md
+          - Charity (Zakah): basic-knowledge/pillars/charity.md
+          - Fasting (Ramadan): basic-knowledge/pillars/fasting.md
+          - Pilgrimage (Hajj): basic-knowledge/pillars/hajj.md
+      - Articles of Faith: basic-knowledge/articles-of-faith.md
+
+  - Ethics & Life:
+      - Morals & Character: ethics-life/morals.md
+      - Daily Life of a Muslim: ethics-life/daily-life.md
+
+  - Clarifications:
+      - Common Misconceptions: clarifications/misconceptions.md
+
+  - Knowledge:
+      - Islamic History: knowledge/history.md
+      - Law (Basics): knowledge/law-basics.md
+      - Spirituality (Ihsan): knowledge/spirituality.md
+
+  - Media:
+      - Videos: media/videos.md
+
+  - About:
+      - About the Project: about/project.md
+      - Support: about/support.md
