--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,12 +19,12 @@ nav:
       - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
       - The Qur’an: basic-knowledge/quran.md
       - The Five Pillars: basic-knowledge/five-pillars.md
-      - Morals & Character: ethics-life/morals.md
-      - Daily Life of a Muslim: ethics-life/daily-life.md
-      - Common Misconceptions: clarifications/misconceptions.md
-      - Islamic History: knowledge/history.md
-      - Law (Basics): knowledge/law-basics.md
-      - Spirituality (Ihsan): knowledge/spirituality.md
+      - Morals & Character: basic-knowledge/morals.md
+      - Daily Life of a Muslim: basic-knowledge/daily-life.md
+      - Common Misconceptions: basic-knowledge/misconceptions.md
+      - Islamic History: basic-knowledge/history.md
+      - Law (Basics): basic-knowledge/law-basics.md
+      - Spirituality (Ihsan): basic-knowledge/spirituality.md
       - Videos: media/videos.md
       - About the Project: about/project.md
       - Support: about/support.md
