--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,8 @@ nav:
       - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
       - The Qur’an: basic-knowledge/quran.md
       - The Five Pillars: basic-knowledge/five-pillars.md
-      - Zakat: basic-knowledge/zakat.md
+        - 1) Shahada: basic-knowledge/shahada.md
+        - 2) Zakat: basic-knowledge/zakat.md
       - Morals & Character: basic-knowledge/morals.md
       - Daily Life of a Muslim: basic-knowledge/daily-life.md
       - Common Misconceptions: basic-knowledge/misconceptions.md
