--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,14 +41,9 @@ nav:
       - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
       - The Qur’an: basic-knowledge/quran.md
       - The Five Pillars: basic-knowledge/five-pillars.md
-      - Shahada: basic-knowledge/shahada.md
+      - Testemoney of Faith: basic-knowledge/shahada.md
+      - Prayer: basic-knowledge/
+      - Fasting: basic-knowledge/
       - Zakat: basic-knowledge/zakat.md
-      - Morals & Character: basic-knowledge/morals.md
-      - Daily Life of a Muslim: basic-knowledge/daily-life.md
+      - Pilgrimage: basic-knowledge/
       - Common Misconceptions: basic-knowledge/misconceptions.md
-      - Islamic History: basic-knowledge/history.md
-      - Law (Basics): basic-knowledge/law-basics.md
-      - Spirituality (Ihsan): basic-knowledge/spirituality.md
-      - Videos: media/videos.md
-      - About the Project: about/project.md
-      - Support: about/support.md
