--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,10 +41,12 @@ nav:
       - What is Islam?: basic-knowledge/what-is-islam.md
       - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
       - The Qur’an: basic-knowledge/quran.md
+      <br>
       - The Five Pillars: basic-knowledge/five-pillars.md
-      - Testemoney of Faith: basic-knowledge/shahada.md
+      - Declaration of Faith: basic-knowledge/shahada.md
       - Prayer: basic-knowledge/
       - Fasting: basic-knowledge/
       - Zakat: basic-knowledge/zakat.md
       - Pilgrimage: basic-knowledge/
+      <br>
       - Common Misconceptions: basic-knowledge/misconceptions.md
