--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Islam Education
+site_name: www.islam-education.com
 site_description: Clear, authentic and accessible knowledge about Islam
 site_url: https://islam-education.com
 
