--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,8 +43,8 @@ nav:
       - The Qur’an: basic-knowledge/quran.md
       - The Five Pillars: basic-knowledge/five-pillars.md
       - Declaration of Faith: basic-knowledge/shahada.md
-      - Prayer: basic-knowledge/
-      - Fasting: basic-knowledge/
+      - Prayer: basic-knowledge/prayer.md
+      - Fasting: basic-knowledge/fasting.md
       - Zakat: basic-knowledge/zakat.md
-      - Pilgrimage: basic-knowledge/
+      - Pilgrimage: basic-knowledge/pilgrimage.md
       - Common Misconceptions: basic-knowledge/misconceptions.md
