--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ theme:
   palette:
   
     - scheme: slate
-      primary: green
+      primary: brown
       accent: amber
       toggle:
         icon: material/weather-night
