--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,3 +48,4 @@ nav:
       - Zakat: basic-knowledge/zakat.md
       - Pilgrimage: basic-knowledge/pilgrimage.md
       - Common Misconceptions: basic-knowledge/misconceptions.md
+      - Timeline: basic-knowledge/timeline.md
