--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,3 +50,7 @@ nav:
       - Pilgrimage: basic-knowledge/pilgrimage.md
       - Common Misconceptions: basic-knowledge/misconceptions.md
       - Timeline: basic-knowledge/timeline.md
+
+
+extra_javascript:
+  - assets/js/ramadan.js
