--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ extra_css:
 
 
 nav:
-      - Ramadan 2026: basic-knowledge/Ramadan 2026.md
+      - Ramadan 2026: basic-knowledge/Ramadan-2026.md
       - Home: index.md
       - What is Islam?: basic-knowledge/what-is-islam.md
       - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
