--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,7 +38,7 @@ extra_css:
 
 
 nav:
-      - Ramadan 2026: basic-knowledge/Ramadan-2026.md
+      - Ramadan 2026: Ramadan-2026.md
       - Home: index.md
       - What is Islam?: basic-knowledge/what-is-islam.md
       - Who is Muhammad ﷺ?: basic-knowledge/muhammad.md
@@ -51,8 +51,6 @@ nav:
       - Pilgrimage: basic-knowledge/pilgrimage.md
       - Common Misconceptions: basic-knowledge/misconceptions.md
       - Timeline: basic-knowledge/timeline.md
-      - About: docs/about.md
+      - About: about.md
 
 
-extra_javascript:
-  - assets/js/ramadan.js
