--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
       - Pilgrimage: basic-knowledge/pilgrimage.md
       - Common Misconceptions: basic-knowledge/misconceptions.md
       - Timeline: basic-knowledge/timeline.md
+      - Haram: basic-knowledge/haram.md
       - About: about.md
 
 
